// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<split> demo: render [basic] correctly 1`] = `
"<div>
  <div class=\\"arco-split arco-split-horizontal\\" style=\\"height: 200px; width: 100%; min-width: 500px;\\">
    <div class=\\"arco-split-pane arco-split-pane-first\\" style=\\"flex: 0 0 calc(50% - 0px);\\">
      <div class=\\"arco-typography\\">Left
        <!---->
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
      </div>
    </div>
    <div class=\\"arco-split-trigger arco-split-trigger-vertical\\">
      <!-- @slot 自定义内容 -->
      <div class=\\"arco-split-trigger-icon-wrapper\\">
        <!-- @slot 自定义 icon --><svg viewBox=\\"0 0 48 48\\" fill=\\"none\\" xmlns=\\"http://www.w3.org/2000/svg\\" stroke=\\"currentColor\\" class=\\"arco-icon arco-icon-drag-dot-vertical arco-split-trigger-icon\\" stroke-width=\\"4\\" stroke-linecap=\\"butt\\" stroke-linejoin=\\"miter\\">
          <path d=\\"M17 8h2v2h-2V8ZM17 23h2v2h-2v-2ZM17 38h2v2h-2v-2ZM29 8h2v2h-2V8ZM29 23h2v2h-2v-2ZM29 38h2v2h-2v-2Z\\" fill=\\"currentColor\\" stroke=\\"none\\"></path>
          <path d=\\"M17 8h2v2h-2V8ZM17 23h2v2h-2v-2ZM17 38h2v2h-2v-2ZM29 8h2v2h-2V8ZM29 23h2v2h-2v-2ZM29 38h2v2h-2v-2Z\\"></path>
        </svg>
      </div>
    </div>
    <div class=\\"arco-split-pane arco-split-pane-second\\">
      <div class=\\"arco-typography\\">Right
        <!---->
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
      </div>
    </div>
  </div>
</div>"
`;

exports[`<split> demo: render [nested] correctly 1`] = `
"<div>
  <div class=\\"arco-split arco-split-horizontal\\" style=\\"height: 200px; width: 100%; min-width: 500px;\\">
    <div class=\\"arco-split-pane arco-split-pane-first\\" style=\\"flex: 0 0 calc(50% - 0px);\\">
      <div class=\\"arco-typography\\">Left
        <!---->
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
      </div>
    </div>
    <div class=\\"arco-split-trigger arco-split-trigger-vertical\\">
      <!-- @slot 自定义内容 -->
      <div class=\\"arco-split-trigger-icon-wrapper\\">
        <!-- @slot 自定义 icon --><svg viewBox=\\"0 0 48 48\\" fill=\\"none\\" xmlns=\\"http://www.w3.org/2000/svg\\" stroke=\\"currentColor\\" class=\\"arco-icon arco-icon-drag-dot-vertical arco-split-trigger-icon\\" stroke-width=\\"4\\" stroke-linecap=\\"butt\\" stroke-linejoin=\\"miter\\">
          <path d=\\"M17 8h2v2h-2V8ZM17 23h2v2h-2v-2ZM17 38h2v2h-2v-2ZM29 8h2v2h-2V8ZM29 23h2v2h-2v-2ZM29 38h2v2h-2v-2Z\\" fill=\\"currentColor\\" stroke=\\"none\\"></path>
          <path d=\\"M17 8h2v2h-2V8ZM17 23h2v2h-2v-2ZM17 38h2v2h-2v-2ZM29 8h2v2h-2V8ZM29 23h2v2h-2v-2ZM29 38h2v2h-2v-2Z\\"></path>
        </svg>
      </div>
    </div>
    <div class=\\"arco-split-pane arco-split-pane-second\\">
      <div>
        <div class=\\"arco-split arco-split-vertical\\" style=\\"height: 200px;\\">
          <div class=\\"arco-split-pane arco-split-pane-first\\" style=\\"flex: 0 0 calc(50% - 0px);\\">
            <div class=\\"arco-typography\\">Top
              <!---->
              <!--v-if-->
              <!--v-if-->
              <!--v-if-->
            </div>
          </div>
          <div class=\\"arco-split-trigger arco-split-trigger-horizontal\\">
            <!-- @slot 自定义内容 -->
            <div class=\\"arco-split-trigger-icon-wrapper\\">
              <!-- @slot 自定义 icon --><svg viewBox=\\"0 0 48 48\\" fill=\\"none\\" xmlns=\\"http://www.w3.org/2000/svg\\" stroke=\\"currentColor\\" class=\\"arco-icon arco-icon-drag-dot arco-split-trigger-icon\\" stroke-width=\\"4\\" stroke-linecap=\\"butt\\" stroke-linejoin=\\"miter\\">
                <path d=\\"M40 17v2h-2v-2h2ZM25 17v2h-2v-2h2ZM10 17v2H8v-2h2ZM40 29v2h-2v-2h2ZM25 29v2h-2v-2h2ZM10 29v2H8v-2h2Z\\" fill=\\"currentColor\\" stroke=\\"none\\"></path>
                <path d=\\"M40 17v2h-2v-2h2ZM25 17v2h-2v-2h2ZM10 17v2H8v-2h2ZM40 29v2h-2v-2h2ZM25 29v2h-2v-2h2ZM10 29v2H8v-2h2Z\\"></path>
              </svg>
            </div>
          </div>
          <div class=\\"arco-split-pane arco-split-pane-second\\">
            <div class=\\"arco-typography\\">Bottom
              <!---->
              <!--v-if-->
              <!--v-if-->
              <!--v-if-->
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>"
`;
